--- a/web/app/themes/europarts/assets/css/europarts.css
+++ b/web/app/themes/europarts/assets/css/europarts.css
@@ -132,11 +132,15 @@ h3 {
 
 /* home slider */
 
-.home-slider .slides .slick-slide {
+.home-slider .slick-slide img {
+    display: inline-block;
+}
+
+.home-slider .slides .slick-slide .slide {
     position: relative;
 }
 
-.home-slider .slides .slick-slide::before {
+.home-slider .slides .slick-slide .slide::before {
     position: absolute;
     top: 0;
     left: 0;
@@ -157,6 +161,27 @@ h3 {
 
 .home-slider .left.slick-arrow img, .home-slider .right.slick-arrow img {
     width: 100%
+}
+
+.home-slider .slide-content {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    transform: translateY(-50%);
+    z-index: 9;
+    color: #FFF;
+    padding-bottom: 0 1.5rem;
+}
+
+.home-slider .slide-content .slide-title {
+    font-size: 1.8rem;
+    display: block;
+}
+
+.home-slider .slide-content .slide-subtitle {
+    font-size: 1.4rem;
+    display: block;
 }
 
 .icons ul li {
@@ -205,6 +230,7 @@ h3 {
 }
 */
 
+/*
 .home-featured .slick-list::after {
     position: absolute;
     content: '';
@@ -216,6 +242,7 @@ h3 {
     background: rgb(246, 246, 246);
     background: linear-gradient(-90deg, rgba(246, 246, 246, 1) 10%, rgba(246, 246, 246, 0) 100%);
 }
+*/
 
 /*.home-featured .slick-list .slick-slide { padding: 0.5rem 0.4rem}*/
 #featuredProducts
@@ -246,7 +273,7 @@ h3 {
 .woocommerce .product .price ins, .woocommerce .product .price del {
     color: #3A6FD9 !important;
     display: block !important;
-    font-size: 1.2rem !important;
+    font-size: 1rem !important;
 }
 
 .woocommerce ul.products li.product .price del, .woocommerce .product .price del {
@@ -255,7 +282,7 @@ h3 {
 }
 
 .woocommerce .products .product .price ins, .woocommerce .product .price ins {
-    font-size: 1.3rem !important;
+    font-size: 1rem !important;
     text-decoration: none !important;
 }
 
@@ -277,7 +304,7 @@ h3 {
 }
 
 .woocommerce .products .product h2 {
-    padding: 1rem 0.5rem 0.5rem 0.5rem !important;
+    padding: 0.5rem 0.5rem 0.5rem 0.5rem !important;
     font-size: 0.9rem
 }
 
@@ -292,7 +319,7 @@ h3 {
     display: flex;
     justify-content: center;
     min-height: 30px;
-    width: auto;
+    width: 100%;
     margin: 0;
     background: #233559;
     color: #FFFFFF;
@@ -396,7 +423,6 @@ h3 {
 
 .category_children li {
     list-style-type: none;
-    font-weight: 300;
 }
 
 #featuredCategory .woocommerce ul.products li {
@@ -437,7 +463,6 @@ h3 {
 
 #featuredCategory .cat-text-featured {
     color: #FFFFFF;
-    font-weight: 300;
     font-size: 1.4rem;
     text-align: center;
     position: absolute;
@@ -580,6 +605,10 @@ input[inputmode=numeric] {
     padding: 1px;
     border: 0px solid #000;
 }
+
+/*
+.cart-wrapper {display: flex}
+*/
 
 .woocommerce .quantity input::-webkit-outer-spin-button,
 .woocommerce .quantity input::-webkit-inner-spin-button {
