--- a/web/app/themes/europarts/assets/css/europarts.css
+++ b/web/app/themes/europarts/assets/css/europarts.css
@@ -408,7 +408,7 @@ h3 {
 
 .woocommerce-MyAccount-navigation,
 .woocommerce-MyAccount-content {
-    padding: 1rem 2rem
+    padding: 1.5rem 2rem 1rem 2rem
 }
 
 .woocommerce-MyAccount-navigation ul li {
